; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-event_queue.c_standalone.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-event_queue.c_standalone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evq_fixture = type { i32 }
%struct.ptunit_result = type { i32 }
%struct.pt_event = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.evq_fixture*)* @standalone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @standalone(%struct.evq_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.evq_fixture*, align 8
  %4 = alloca %struct.pt_event*, align 8
  store %struct.evq_fixture* %0, %struct.evq_fixture** %3, align 8
  %5 = load %struct.evq_fixture*, %struct.evq_fixture** %3, align 8
  %6 = getelementptr inbounds %struct.evq_fixture, %struct.evq_fixture* %5, i32 0, i32 0
  %7 = call %struct.pt_event* @pt_evq_standalone(i32* %6)
  store %struct.pt_event* %7, %struct.pt_event** %4, align 8
  %8 = load %struct.pt_event*, %struct.pt_event** %4, align 8
  %9 = call i32 @ptu_ptr(%struct.pt_event* %8)
  %10 = load %struct.pt_event*, %struct.pt_event** %4, align 8
  %11 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ptu_uint_eq(i32 %12, i64 0)
  %14 = load %struct.pt_event*, %struct.pt_event** %4, align 8
  %15 = getelementptr inbounds %struct.pt_event, %struct.pt_event* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @ptu_uint_eq(i32 %16, i64 0)
  %18 = call i32 (...) @ptu_passed()
  %19 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %18, i32* %19, align 4
  %20 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  ret i32 %21
}

declare dso_local %struct.pt_event* @pt_evq_standalone(i32*) #1

declare dso_local i32 @ptu_ptr(%struct.pt_event*) #1

declare dso_local i32 @ptu_uint_eq(i32, i64) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
